--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid" id="app">
   <app-intro></app-intro>
   <app-about></app-about>
   <app-education></app-education>
